# kuber-service

deployment-vanilla/: backend.yaml  frontend.yaml  ingress.yaml
simple-service-backend/: Cargo.toml  Dockerfile  Makefile  README.md
simple-service-backend/config/: default.toml
simple-service-backend/src/: features.rs  lib.rs  main.rs  settings.rs
simple-service-backend/src/features/: hello.rs
simple-service-frontend/: Dockerfile  package.json  svelte.config.js  vite.config.ts
simple-service-frontend/src/routes/: +page.server.ts  +page.svelte
